# betting_parser

./: LICENSE  README.md  add_managers.py  config.py  england-league-two.csv  england-premier-league_links.txt  england_premier_league.csv  entity.py  links.py  links_script.py  matcher.py  parser.py  pyproject.toml  saver.py  script.py
additional_data_parsers/: indices.py  managers.py  stadiums.py  teams.py  teams_detailed.py  transfers.py
data/: 20220727.csv  indices.json  leagues.py  managers.csv  managers.json  new_stadiums.json  stadiums.json  teams.json  teams_detailed.json  transfers.json
data/1_template/: leagues.py  matches.py
data/england/: leagues.py  managers.json  matches.py  stadiums.json  teams.json  teams_detailed.json  transfers.json
data/germany/: indices.json  leagues.py  managers.json  matches.py  stadiums.json  teams.json  teams_detailed.json  transfers.json
data/italy/: indices.json  leagues.py  managers.json  matches.py  stadiums.json  teams.json  (+2 more)
main_data_parsers/: entity.py  links.py  parser.py
matchers/: league_matcher.py  matcher.py  matches.py  stadiums_matcher.py  team_matcher.py
pipeline/: 0_matcher.py  1_add_fix_data.py  1_fix_seasons_and_leagues.py  2_add_teams.py  3_add_managers.py  4_add_stadiums.py  5_add_detailed_teams.py  6_add_transfers.py  7_merge_data.py  add_detailed_teams.py  add_fix_data.py  add_managers.py  add_stadiums.py  add_teams.py  add_transfers.py  config.py  fix_data.py  merge_data.py  utils.py
scripts/: links_script.py  saver.py  script.py
src/: config.py
tests/: test_extract_season_year.py
(+42 files in other folders)
